2013-??-?? Frederik "Freso" S. Olesen <archlinux@freso.dk>

	* ?-? :
	Added ChangeLog.
	Updated package url.

2011-??-?? Frederik "Freso" S. Olesen <archlinux@freso.dk>

	* alpha3pre7-1 :
	Freso took over the package.