@@ -9,9 +9,11 @@ pkgbase = mcskinedit
 	depends = java-runtime
 	source = http://orcsinthebasement.com/tempDL/SkinEdit+Alpha+3+pre+7.zip
 	source = mcskinedit
+	source = mcskinedit.desktop
 	source = https://dl.dropbox.com/u/15956363/skintest2.jar
 	md5sums = d55191ab04cef76faf7d3a5c4bee288d
 	md5sums = c2b48f8d04d8470b78d7b288e3004fc7
+	md5sums = 62b29f2419c85ce964fde86ded700f64
 	md5sums = ec418807008ad3f14d55db6457a693b8
 
 pkgname = mcskinedit
